syntax = "proto3";

import "google/protobuf/empty.proto";

service UserData {
  rpc GetUsers (google.protobuf.Empty) returns (UserList) {}
  rpc GetUser (GetUserRequest) returns (User) {}
  rpc UpdateUserMoney (User) returns (Response) {}
  rpc DeleteUser (User) returns (Response) {}
}

message User {
    int64 id =1;
    string name =2;
    int64 money=3;
}

message UserList {
    repeated User user =1;
}

message  GetUserRequest {
  int64 id =1;
}

message Response {
  bool status=1;
  string msg=2;
}